--- a/app/src/main/res/layout/help.xml
+++ b/app/src/main/res/layout/help.xml
@@ -21,7 +21,7 @@
 		android:textSize="12sp"/>
 
 	<TextView
-		android:text="主要使用方法\n0.仔细回忆能使待测试应用崩溃的方法，确保能够干净利落地触发它。\n1.开启本应用或者重启设备。监听服务会自动启动。如果没有root授权请完成root授权，有时这会延迟几秒钟，最好初次打开之前请先打开授权管理应用以防止su延迟。\n2.有两个模式。开启开关为普通用户模式，这个模式中如果捕获到崩溃会弹出一条通知显示最近的崩溃窗口，并且如果在应用窗口开启则会再显示一条常驻通知。关闭开关为开发者模式，这个模式在监听到FC时只会记录日志。不会弹出通知。如果初次打开开关，请打开之后再次打开应用设置方可生效。\n3.执行能使待测试应用崩溃的操作，出现停止运行窗口后点击本应用弹出的通知。可以查看、复制或发送日志。阅读器不允许被退到后台防止输出的日志不是最新的日志，阅读器仅能处理一份日志。\n4.记录的日志会形成文件保存下来，点击清理文件可以一键删除工作目录的所有内容，包括日志，设置，缓存。。。\n\n日志阅读器中，长按选择框查看运行时刻环境信息，长按保留日志查看日志文件保存位置。\n\n注意：有时superSU会弹出由本应用引起的讨厌的toast，这时只要到superSU中本应用的选项禁用通知即可。"
+		android:text="主要使用方法\n1.开启本应用或者重启设备。监听服务会自动启动。如果没有root授权请完成root授权，有时这会延迟几秒钟，最好初次打开之前请先打开授权管理应用以防止su延迟。\n2.有两个模式。开启开关为普通用户模式，这个模式中如果捕获到崩溃会弹出一条通知显示最近的崩溃窗口，并且如果在应用窗口开启则会再显示一条常驻通知。关闭开关为开发者模式，这个模式在监听到FC时只会记录日志。不会弹出通知。如果初次打开开关，请打开之后再次打开应用设置方可生效。\n3.执行能使待测试应用崩溃的操作，出现停止运行窗口后点击本应用弹出的通知。可以查看、复制或发送日志。阅读器不允许被退到后台防止输出的日志不是最新的日志，阅读器仅能处理一份日志。\n4.记录的日志会形成文件保存下来，点击清理文件可以一键删除内置存储中FClog文件夹中的所有内容，包括日志，设置，缓存。。。\n\n日志阅读器中，长按选择框查看运行时刻环境信息，长按保留日志查看日志文件保存位置。\n\n注意：有时superSU会弹出由本应用引起的讨厌的toast，这时只要到superSU中本应用的选项禁用通知即可。"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:textSize="12sp"/>
@@ -35,7 +35,7 @@
 	<TextView
 		android:layout_height="wrap_content"
 		android:layout_width="wrap_content"
-		android:text="制作者：酷安网@龙红瞳\n日期：20161211"/>
+		android:text="制作者：酷安网@龙红瞳\n日期：20170106"/>
 
 </LinearLayout>
 
